  Headline:
    - Fixes a lot of bugs relating to inputs
  Features:
    - User configs are stored in userconfig.json
    - Base configs are stored in internal/config.json
    - If a key is not found in userconfigs, the loader searches in internal/config.json
    - Controls for filters are set in "filter_controls", as a dict of "name": "keybind"
    - To unset a keybind, just set it to "unbound"
  Bugfixes:
    - clicking while submitting say no longer clobbers the chatbar
    - keys are blocked more robustly
    - you no longer randomly walk down after submitting say
---------------------------------------------------------------------------------------------------
Version: 0.0.14
Date: 2025-8-31
  Name:
    - The Installer Update
  Headline:
    - Packages an installer with all releases
  Features:
    - python 3.11.9 comes bundled with your installation
---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: 2025-8-30
  Name:
    - The QOL update
  Headline:
    - Makes setup easier.
  Changes:
    - setup.bat now should not freeze completely, but show a progressbar
    - if a dependency is missing it actually tells you what to do
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2025-8-30
  Name:
    - The Changelog Fix Update
  Headline:
    - Fixes changelog loading.
  Bugfixes:
    - Changelogs from github load properly, when previously would error out.
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2025-8-30
  Name:
    - The Group Update
  Headline:
    - Filters can be grouped and disable each other.
  Features:
    - Filters can have groups and be exclusive within that group.
    - If an exclusive filter is activated, all others disable
    - If a non-exclusive filter is activated, any enabled exclusive filters are disabled