@@ -1,0 +1,2 @@
+def process(input: str) -> str:
+    return ":c " + input.removeprefix("; ")
